# manufacturing-execution-system-demo

./: .gitignore  .prettierignore  README.md  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  init-letsencrypt.sh
web/: .coveragerc  .dockerignore  Dockerfile  Dockerfile.prod  entrypoint.prod.sh  entrypoint.sh  pyproject.toml
web/apps/api/: select_views.py  serializers.py  urls.py  views.py
web/apps/common/: admin.py  context_processors.py  converters.py  filters.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
web/apps/masterdata/: admin.py  context_processors.py  filters.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
web/apps/production/: models.py  urls.py
web/apps/purchasing/: models.py  urls.py
web/apps/sales/: models.py  urls.py  views.py
web/apps/users/: admin.py  forms.py  models.py  urls.py
web/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
web/static/css/: select2-custom-copy.css  select2-custom.css  styles.css  trumbowyg.min.css
web/static/js/: dropdown.js  header.js  jquery-ui.js  main.js  sidebar.js
web/templates/: base.html
web/templates/components/: buttons_mutate.html  dropdown_material_unit_options.html  filterview_filter.html  filterview_input.html  footer.html  messages.html  modal_confirm_archive.html  modal_confirm_delete.html  pagination.html  sidebar-copy.html  sidebar.html  styles.html  toolbar-icons.html  top_panel_child_mutate.html  top_panel_detail.html  top_panel_mutate.html
web/templates/generic/: generic_child_mutate.html  generic_detail.html  (+4 more)
(+75 files in other folders)
